# autonav-ws

./: .gitignore  .gitmodules  :w  README.md  bot.rviz  os-122220002210-metadata.json  record.sh  sim.rviz
manas_expo_nova/: CMakeLists.txt  package.xml
manas_expo_nova/launch/: pid_launch.launch  teleop_launch.launch  xbox_launch.launch
manas_expo_nova/scripts/: Bot.py  Perm-Sol.txt
manas_expo_nova/src/compy/: README.md  __init__.py  munching.py  packet.py
nav/goal_calculator/goal_calculator/: goal_calc.py  goal_calc2.py
nav/goal_calculator_cpp/src/: goal_calc.cpp
nav/launcher/launch/: main.launch.py
nav/local_costmap/src/: local_costmap_node.cpp
nav/planner_server/config/: Controller.yaml  bt_recovery.yaml  controller.yaml  new_planner_server.yaml  old_controller.yaml  planner_server.yaml  recovery.yaml  smoother.yaml
nav/planner_server/launch/: behaviour.xml  planner.launch.py
nav/ramp_goals/src/: ramp_goals.cpp
nav/robot_pose_publisher/src/: robot_pose_publisher.cpp
nav/rviz2/: rviz.config.rviz
navigation/: CMakeLists.txt  package.xml
navigation/config/: base_global_planner.yaml  base_local_planner.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
navigation/config/dwa/: global_costmap_params.yaml  local_costmap_params.yaml
navigation/config/teb/: base_local_planner.yaml
navigation/launch/: auto_nav.launch  dwa.launch  move_base.launch  navigation.launch.py  start_bot.launch  teb.launch
navigation/param/: idk.yaml  nav.yaml
navigation/src/: global_goal_publisher.cpp  goal_gen.cpp
src/: \
src/filterer/: CMakeLists.txt  README.md  package.xml
src/filterer/launch/: filter.launch
src/filterer/scripts/: lane_filterer.py  monocam.py  recorder.py
src/goal_calculator/: CMakeLists.txt  README.md  package.xml
src/goal_calculator/launch/: goal_calc.launch
src/goal_calculator/scripts/: fake_gps_publisher.py  light_enabler.py
src/goal_calculator/src/: goal_gen.cpp  utils.cpp
src/launcher/: README.md
src/launcher/config/: nova.yaml
src/launcher/config/sim/: nova.yaml
src/launcher/launch/: goal_calculator.launch  move_base.launch  nav.launch  sb.launch  sensors.launch  transforms.launch  vision.launch
src/launcher/launch/irl/: goal_calculator.launch  move_base.launch  sb.launch  sensors.launch  vision.launch
src/launcher/launch/sim/: goal_calculator_sim.launch  move_base_sim.launch  sb_sim.launch  transforms_sim.launch  vision_sim.launch
src/mapper/: CMakeLists.txt  README.md  package.xml
src/mapper/launch/: mapping.launch  obstacle_cloud.launch
src/mapper/src/: mapper.cpp  mapper_sim.cpp  obstacle_cloud.cpp  pc_mapper.cpp  utils.cpp
src/navigation/: README.md
src/navigation/config/: base_global_planner.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/navigation/launch/: move_base.launch  start_bot.launch
src/navigation/scripts/: movement_analyzer.py
src/navigation/src/: goal_gen.cpp
src/transformer/: CMakeLists.txt  README.md  package.xml
src/transformer/launch/: sensors.launch  transform.launch  transformer.launch
src/transformer/src/: base_link_tf.cpp  lidar_tf.cpp  odom_pc.cpp  odom_pc_sim.cpp  zed_tf.cpp
src/vision/: package.xml
src/vision/launch/: filter.launch  obstacle_cloud.launch  sensors.launch  vision.launch
src/vision/scripts/: filter_test.ipynb
src/vision/src/: pc_mapper.cpp
teleop_controller/: CMakeLists.txt  README.md  package.xml  setup.py
teleop_controller/launch/: pid_launch.launch  teleop_launch.launch  xbox_launch.launch
teleop_controller/scripts/: Bot.py  run.py  teleop_control.py  xbox_control.py
teleop_controller/src/compy/: command.py  conn.py
transformer/: CMakeLists.txt  package.xml
transformer/launch/: transform.launch  transform.launch.py
transformer/src/: lidar_tf.cpp  odom_pc.cpp  point_cloud_transformer.cpp  zed_tf.cpp
vision/: CMakeLists.txt  package.xml
vision/launch/: filter.launch  filter.launch.py  mapping.launch  mapping.launch.py  scan.launch  sensors.launch  sensors.launch copy.py  sensors.launch.py  vision.launch  vision.launch.py
vision/scripts/: bag_play_subs.py  hsv_filter_gui.py  lane_filterer.py  mono_cam.py
vision/scripts/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
vision/src/: 2d_scan.cpp  pc_mapper.cpp
(+6 files in other folders)
